# evko-prod

./: .dockerignore  .env.example  .gitignore  .gitmodules  API_ENDPOINTS.md  AUTODEPLOY.md  BUSINESS_PIPELINES.md  CMakeLists.txt  Dockerfile  Makefile  README.md  appeals.go  cleanup.sh  db.go  db_script.py  docker-compose.yml  error.go  go.mod  go.sum  integration_api_test.go  integration_helpers_test.go  main.go  session.go  user.go  utils.go  Архитектура.drawio
.github/workflows/: verify.yml
api/appeals/: appeals.go
api/auth/: auth.go
api/crm/: crm.go
api/crm/clients/: clients.go
api/crm/employees/: employees.go
api/crm/profiles/: profiles.go
api/crm/reprezentatives/: reprezentatives.go
api/crm/sites/: sites.go
api/nri/: nri.go
api/utils/: utils.go  utils_test.go
config/: config.json
database/: db.go
deploy/systemd/: evko-autodeploy.service  evko-autodeploy.timer
ebko-crm/: .dockerignore  API_ENDPOINTS.md  Dockerfile  README.md  nginx.conf
ebko-crm/src/: App.css  App.tsx  constants.ts  mockData.ts  types.ts
ebko-crm/src/api/: auth.ts  crm.ts
ebko-crm/src/components/: LoginScreen.tsx  Sidebar.tsx
ebko-crm/src/modules/: AppealsModule.tsx  ClientsModule.tsx  CustomersModule.tsx  EmployeesModule.tsx  EquipmentModule.tsx  ProfileModule.tsx  TaskBoardModule.tsx
ebko-crm/src/utils/: image.ts  markdown.tsx  permissions.ts  phone.ts  random.ts
migrations/: 00001_init.sql  00002_appeals.sql  00002_seed.sql  00003_reaction_images.sql  00003_seed.sql  00004_localize_seed_content.sql  00005_drop_connected_tickets_check.sql  00006_expand_demo_dataset.sql  00007_make_equipment_site_nullable.sql  00008_add_internal_ebko_customer.sql  00009_task_dashboards.sql
scripts/: check-and-deploy.sh  deploy.sh  install-autodeploy.sh
src/drogon_gen/handlers/Auth/: Auth.cc  Auth.h
src/drogon_gen/models/Auth/: Accounts.cc  Accounts.h  Permissions.cc  Permissions.h  Rolepermissions.cc  Rolepermissions.h  Roles.cc  Roles.h  Sessions.cc  Sessions.h  model.json
